[tool.poetry]
name = "cipher-nimishakavi-usha"
version = "0.1.0"
description = ""
authors = ["unimishakavi08e <ukn2102@columbia.edu>"]
readme = "README.md"
packages = [{include = "cipher_nimishakavi_usha"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
Sphinx = "^5.3.0"
sphinxcontrib-napoleon = "^0.7"
napoleon2html = "^0.2.0"
sphinxcontrib-napoleon2 = "^1.0"
sphinx-autodoc-napoleon-typehints = "^2.1.6"
sphinx-rtd-theme = "^1.1.0"
myst-nb = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
